deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mario
spec:
 replicas: 3
 selector:
    matchLabels:
      app: my-app
 template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: mario
        image: kaminskypavel/mario
        ports:
        - name: mario
          containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
