service.yaml
apiVersion: v1
kind: Service
metadata:
 name: mario-service
 labels:
    app: my-app
spec:
 ports:
  - port: 80
    targetPort: 8080
 selector:
    app: my-app
 type: LoadBalancer
