ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: mario-ingress
spec:
 rules:
  - host: localhost/mario
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mario-service
            port:
              number: 80
